little tab alignment bug

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -101,7 +101,7 @@
 
     &, &:before {
       background: @tab-background-color-active;
-      height: @tab-height + 1px;
+      height: @tab-height - 1px;
       box-shadow: none;
     }
   }
